# pai_poc

pai_inference_poc/: README.md
pai_inference_poc/my_fancy_cpp_inference/: CMakeLists.txt  README.md  my_fancy_cpp_inference_plugins.xml  package.xml
pai_inference_poc/my_fancy_cpp_inference/config/: policy_inference_controllers_my_fancy_cpp.yaml
pai_inference_poc/my_fancy_cpp_inference/include/my_fancy_cpp_inference/: fancy_cpp_backend.hpp
pai_inference_poc/my_fancy_cpp_inference/src/: fancy_cpp_backend.cpp
pai_inference_poc/my_fancy_python_inference/: CMakeLists.txt  README.md  package.xml
pai_inference_poc/my_fancy_python_inference/config/: policy_inference_controllers_my_fancy_python.yaml
pai_inference_poc/my_fancy_python_inference/my_fancy_python_inference/: __init__.py  fancy_python_backend.py
pai_inference_poc/policy_inference_core/: CMakeLists.txt  README.md  package.xml  policy_inference_core_backend_plugins.xml
pai_inference_poc/policy_inference_core/include/policy_inference_core/: example_cpp_backend.hpp  inference_backend_base.hpp  policy_types.hpp  python_backend_bridge.hpp
pai_inference_poc/policy_inference_core/policy_inference_core_py/: __init__.py
pai_inference_poc/policy_inference_core/src/: backend_plugin_smoke.cpp  example_cpp_backend.cpp  python_backend_bridge.cpp
pai_inference_poc/policy_inference_core/test/: test_inference_core.cpp
pai_inference_poc/policy_inference_demo/: CMakeLists.txt  README.md  package.xml  policy_inference_demo_backend_plugins.xml  policy_inference_demo_plugins.xml
pai_inference_poc/policy_inference_demo/config/: policy_inference_controllers_example_cpp.yaml  policy_inference_controllers_example_python.yaml
pai_inference_poc/policy_inference_demo/include/policy_inference_demo/core/: example_cpp_backend.hpp  inference_backend_base.hpp  policy_types.hpp  python_backend_bridge.hpp
pai_inference_poc/policy_inference_demo/include/policy_inference_demo/interface/: ros2_control_policy_inference.hpp
pai_inference_poc/policy_inference_demo/launch/: ros2_control_inference_demo.launch.py  standalone_inference_demo.launch.py
pai_inference_poc/policy_inference_demo/policy_inference_demo_py/: __init__.py  example_python_backend.py
pai_inference_poc/policy_inference_demo/src/: standalone_inference_demo.cpp
pai_inference_poc/policy_inference_demo/src/core/: backend_plugin_smoke.cpp  example_cpp_backend.cpp  python_backend_bridge.cpp
pai_inference_poc/policy_inference_demo/src/interface/: ros2_control_policy_inference.cpp
pai_inference_poc/policy_inference_demo/test/: test_inference_core.cpp  test_ros2_control_plugin.cpp
pai_inference_poc/policy_inference_demo/urdf/: policy_inference_demo.urdf
pai_inference_poc/policy_inference_ros2_control/: CMakeLists.txt  README.md  package.xml  policy_inference_ros2_control_plugins.xml
pai_inference_poc/policy_inference_ros2_control/config/: policy_inference_controllers_example_cpp.yaml  policy_inference_controllers_example_python.yaml
pai_inference_poc/policy_inference_ros2_control/include/policy_inference_ros2_control/interface/: ros2_control_policy_inference.hpp
pai_inference_poc/policy_inference_ros2_control/launch/: ros2_control_inference_demo.launch.py
pai_inference_poc/policy_inference_ros2_control/src/interface/: ros2_control_policy_inference.cpp
pai_inference_poc/policy_inference_ros2_control/test/: test_ros2_control_plugin.cpp
pai_inference_poc/policy_inference_ros2_control/urdf/: policy_inference_core.urdf
pai_inference_poc/policy_inference_standalone/: CMakeLists.txt  README.md  package.xml
pai_inference_poc/policy_inference_standalone/launch/: standalone_inference_demo.launch.py
pai_inference_poc/policy_inference_standalone/src/: standalone_inference_demo.cpp
