<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_fancy_cpp_inference</name>
  <version>0.0.1</version>
  <description>
    Minimal external C++ backend plugin for `policy_inference_core`.
  </description>
  <maintainer email="jennifer@example.com">Jennifer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>policy_inference_core</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

